--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,8 +11,13 @@ on:
 
 jobs:
   build:
+  
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
+        mongodb-version: ['4.0', '4.2', '4.4']
 
     steps:
     - uses: actions/checkout@v2
