--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: PyStock CI
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x]
-        mongodb-version: ['4.0', '4.2', '4.4']
+        mongodb-version: ['4.0',  '5.0']
 
     steps:
     - uses: actions/checkout@v2
